# faust_joins

./: README.md  pyproject.toml
examples/: suess_example.py
faust_joins/: joiner.py
tests/: test_joiner.py
