[tool.poetry]
name = "faust_joins"
version = "0.1.0"
description = "Join Faust Streams"
authors = ["Brian Stearns <brian.stearns@kensho.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
faust = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
