[tool.poetry]
name = "faust-joins"
version = "0.1.3"
description = "Join Faust Streams"
authors = ["Brian Stearns <brian.stearns@kensho.com>"]
license = "MIT"
repository = "https://github.com/BWStearns/faust_joins"
documentation = "https://github.com/BWStearns/faust_joins"
keywords = ["Faust",
            "joins",
            "kafka"]

[tool.poetry.dependencies]
python = "^3.6"
faust = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/BWStearns/faust_joins/issues"
